i add a main content

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 
     <div class="main">
         <div id="chipFilter" class="chip-filter"></div>
+        <div class="videos" id="videos"></div>
     </div>
-<script src="chip.js"></script>
+<script src="components/chip.js"></script>
+<script src="components/videocard.js"></script>
 </body>
 </html>
