table responsive done

--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaquery.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Youtube</title>
 </head>
 <body>
     <div class="navbar">
         <div class="navbar-content">
-            <a class="title-section" href="#">
+            <a class="title-section" href="index.html">
                 <i id="logo"class="fa-brands fa-youtube"></i>
                 <span>YouTube</span>
             </a>
 
             <div class="search-section">
-                <input type="text" class="searchbar" placeholder="Search">
-                <button class="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <input id="searchInput" type="text" class="searchbar" placeholder="Search">
+                <button id="searchBtn" class="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
                 <button class="mic-button"><i class="fa-solid fa-microphone"></i></button>
             </div>
 
@@ -38,5 +39,6 @@
     </div>
 <script src="components/chip.js"></script>
 <script src="components/videocard.js"></script>
+<script src="script/searchbar.js"></script>
 </body>
 </html>
